--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,56 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
+  background-color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.image {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+.button_box {
+  margin: 40px 0;
+  gap: 10px;
+  width: auto;
+  display: flex;
+  padding-left: 20px;
+  padding-right: 20px;
+  flex-direction: column;
+  background-color: white;
+}
+
+.button_lg {
+  width: 100%;
+  display: flex;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.button_md {
+  width: 100%;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 10px;
+  border: 1px solid #ececec;
+}
+
+.button_list {
+  gap: 10px;
+  width: 100%;
+  display: flex;
+  background-color: white;
+  justify-content: space-between;
 }
 
 @keyframes logo-spin {
